force-app/main/default/objects/In_product_requests__c/In_product_requests__c.object-meta.xml
<CustomObject>
    <description>Object to receive in product pricing and demo requests as well as mobile demo requests</description>
    <label>In product request</label>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>In product requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>