force-app/main/default/objects/In_product_requests__c/fields/Brightwheel_Owner_UUID__c.field-meta.xml
<CustomField>
    <fullName>Brightwheel_Owner_UUID__c</fullName>
    <description>Brightwheel USer UUID from product</description>
    <externalId>true</externalId>
    <label>Brightwheel User UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>