force-app/main/default/objects/In_product_requests__c/fields/Brightwheel_School_UUID__c.field-meta.xml
<CustomField>
    <fullName>Brightwheel_School_UUID__c</fullName>
    <description>Brightwheel School UUID from product</description>
    <externalId>true</externalId>
    <label>Brightwheel School UUID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>