force-app/main/default/objects/In_product_requests__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email from production</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>