force-app/main/default/objects/In_product_requests__c/fields/First_name__c.field-meta.xml
<CustomField>
    <fullName>First_name__c</fullName>
    <description>First name from production</description>
    <label>First name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>