force-app/main/default/objects/In_product_requests__c/fields/Last_name__c.field-meta.xml
<CustomField>
    <fullName>Last_name__c</fullName>
    <description>Last name from product</description>
    <label>Last name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>