force-app/main/default/objects/In_product_requests__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone from production</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>