force-app/main/default/objects/In_product_requests__c/fields/Process_Base_Time__c.field-meta.xml
<CustomField>
    <fullName>Process_Base_Time__c</fullName>
    <defaultValue>Now()+61/1440</defaultValue>
    <description>Time delay workaround for Process Builder</description>
    <label>Process Base Time</label>
    <type>DateTime</type>
</CustomField>