force-app/main/default/objects/In_product_requests__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>Request from product</description>
    <label>Request</label>
    <length>100</length>
    <type>Text</type>
</CustomField>