force-app/main/default/objects/In_product_requests__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source from product</description>
    <label>Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>