force-app/main/default/objects/In_product_requests__c/fields/Source_detail__c.field-meta.xml
<CustomField>
    <fullName>Source_detail__c</fullName>
    <description>Source detail from product</description>
    <label>Source detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>