force-app/main/default/objects/In_product_requests__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Request__c</columns>
    <columns>Source__c</columns>
    <columns>Source_detail__c</columns>
    <columns>Brightwheel_Owner_UUID__c</columns>
    <columns>Brightwheel_School_UUID__c</columns>
    <columns>Email__c</columns>
    <columns>First_name__c</columns>
    <columns>Last_name__c</columns>
    <columns>Phone__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>